# tada-app

./: .env.example  .gitignore  .npmignore  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
addons/biomejs/: package.json  tada.json
addons/biomejs/src/: biome.json
addons/glsl/: package.json  tada.json
addons/tailwindcss/: package.json  tada.json
cli/: Cargo.toml  bin.cjs  index.d.ts  index.js  package.json
cli/__test__/: index.spec.mjs
cli/npm/android-arm-eabi/: README.md  package.json
cli/npm/android-arm64/: README.md  package.json
cli/npm/darwin-arm64/: README.md  package.json
cli/npm/darwin-universal/: README.md  package.json
cli/npm/darwin-x64/: README.md  package.json
cli/npm/freebsd-x64/: README.md  package.json
cli/npm/linux-arm-gnueabihf/: README.md  package.json
cli/npm/linux-arm-musleabihf/: README.md  package.json
cli/npm/linux-arm64-gnu/: README.md  package.json
cli/npm/linux-arm64-musl/: README.md  package.json
cli/npm/linux-riscv64-gnu/: README.md  package.json
cli/npm/linux-x64-gnu/: README.md  package.json
cli/npm/linux-x64-musl/: README.md  package.json
cli/npm/win32-arm64-msvc/: README.md  package.json
cli/npm/win32-ia32-msvc/: README.md  package.json
cli/npm/win32-x64-msvc/: README.md  package.json
cli/src/: lib.rs  prompts.rs
cli/src/utils/: fs.rs  mod.rs  pm.rs  style.rs
templates/react/: README.md  package.json  tsconfig.json  vite.config.ts
templates/solid/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
(+6 files in other folders)
